Changed Background Color, added links for categories section and added faq in footer

--- a/aboutus.html
+++ b/aboutus.html
@@ -103,6 +103,7 @@
             <a href="/tnc.html">Terms of Use</a>
             <a href="/aboutus.html">About Us</a>
             <a href="#contact">Contact Us</a>
+            <a href="/public/pdfs/FnQ.pdf">FAQs</a>
           </div>
         </div>
         <div class="footer-bottom">
