--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         </div>
       </div>
       <div class="hero-images">
-        <img src="/public/images/hero1.png" alt="Premium T-Shirt Showcase" class="hero-img">
-        <img src="/public/images/hero2.png" alt="Fashion Collection Display" class="hero-img">
+        <img src="/public/images/FrontPageImage.png" alt="Premium T-Shirt Showcase" class="hero-img">
       </div>
     </section>
 
@@ -53,12 +52,12 @@
         <article class="category-card">
           <h3>Polo T-Shirt</h3>
           <div class="category-image" style="background-image: url(/public/images/polo\ tshirt.webp)"></div>
-          <a href="#custom" class="category-link">See more</a>
+          <a href="/public/pdfs/POLO T SHIRTS.pdf" class="category-link">See more</a>
         </article>
         <article class="category-card">
           <h3>Round Neck T-Shirt</h3>
           <div class="category-image" style="background-image: url(/public/images/round\ neck\ tshirt.jpg)"></div>
-          <a href="#custom" class="category-link">See more</a>
+          <a href="/public/pdfs/ROUND NECK T-SHIRTS.pdf" class="category-link">See more</a>
         </article>
         <article class="category-card">
           <h3>Oversized T-Shirt</h3>
@@ -70,12 +69,12 @@
         <article class="category-card">
           <h3>Sweatshirts</h3>
           <div class="category-image" style="background-image: url(/public/images/sweatshirt.webp)"></div>
-          <a href="#custom" class="category-link">See more</a>
+          <a href="/public/pdfs/HOODIE & SWEAT SHIRT CATALOGUE.pdf" class="category-link">See more</a>
         </article>
         <article class="category-card">
           <h3>Hoodie</h3>
           <div class="category-image" style="background-image: url(/public/images/hoodie.jpg)"></div>
-          <a href="#custom" class="category-link">See more</a>
+          <a href="/public/pdfs/HOODIES-Catalogue.pptx" class="category-link">See more</a>
         </article>
       </div>
     </section>
@@ -168,11 +167,12 @@
           <a href="/tnc.html">Terms of Use</a>
           <a href="/aboutus.html">About Us</a>
           <a href="#contact">Contact Us</a>
+          <a href="/public/pdfs/FnQ.pdf">FAQs</a>
         </div>
       </div>
       <div class="footer-bottom">
         <button class="language-button">English</button>
-        <p class="credits">Made with &#10084; by Ashish Nayak</p>
+        <p class="credits">&copy; 2025 YuvaWear. All rights reserved.</p>
       </div>
     </div>
   </footer>  
