Added Contact Us button instead of Form

--- a/index.html
+++ b/index.html
@@ -125,36 +125,13 @@
 
     <section id="contact" class="contact">
       <div class="contact-container">
-        <h2 class="section-title">Contact Us</h2>
-        <form class="contact-form" id="contactForm">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="contact">Contact No</label>
-            <input type="tel" id="contact" name="contact" required>
-          </div>
-          <div class="form-group">
-            <label for="college">College Name</label>
-            <input type="text" id="college" name="college" required>
-          </div>
-          <div class="form-group">
-            <label for="event-date">Event Date</label>
-            <input type="date" id="event-date" name="event-date" required>
-          </div>
-          <div class="form-group">
-            <label for="message">Message (optional)</label>
-            <textarea id="message" name="message"></textarea>
-          </div>
-          <button type="submit" class="submit-button">Submit</button>
-        </form>
+        <a href="tel:+919266969958">
+        <button class="contact-us-btn" id="contactBtn">Contact Us</button>
+        </a>
       </div>
     </section>
+    
+    
   </main>
 
   <footer class="footer">
