--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <section id="contact" class="contact">
       <div class="contact-container">
-        <a href="tel:+919266969958">
+        <a href="https://wa.link/h7l6yr">
         <button class="contact-us-btn" id="contactBtn">Contact Us</button>
         </a>
       </div>
