Reduced Contact Us Space and changed the links

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section id="contact" class="contact">
       <div class="contact-container">
         <a href="https://wa.link/h7l6yr">
-        <button class="contact-us-btn" id="contactBtn">Contact Us</button>
+        <button class="contact-us-btn" id="contactBtn">Contact Us.</button>
         </a>
       </div>
     </section>
